# My-contracts

./: README.md
eth/Voting/script/: Counter.s.sol
eth/Voting/src/: Voting.sol
eth/Voting/test/: Voting.t.sol
eth/marketplace/: README.md  package-lock.json  package.json
eth/marketplace/contracts/: NFTMarketplace.sol
eth/xtalk gateway/: .gitignore  README.md  compiler_config.json  hardhat.config.js  package-lock.json  package.json
eth/xtalk gateway/cache/: solidity-files-cache.json
eth/xtalk gateway/contracts/: XTalkGateway.sol
eth/xtalk gateway/scripts/: add_authorized_signer.js  add_liquidity.js  call_bridge.js  deploy_bridge.js  deploy_cross_chain_swap.js  deploy_l1xnft.js  deploy_token.js  execute_swap.js  finilize_swap.js  get_authorized_signers.js  initiate_swap.js  mint.js
eth/xtalk gateway/tests/: L1XBridge.tests.js  generate_payload.js  test_payload.js
solana/l1x-gateway/: package-lock.json
solana/l1x-gateway/scripts/: entrypoint.ts  initiate_flow.ts
solana/l1x-gateway/tests/: xtalk.ts
solana/l1x-swap/: .env  Anchor.toml  README.md  package-lock.json  package.json
solana/l1x-swap/programs/cross_chain_swap/: Cargo.toml
solana/l1x-swap/programs/cross_chain_swap/src/: errors.rs  events.rs  instructions.rs  lib.rs  swap_accounts.rs
solana/l1x-swap/scripts/: create_and_mint.ts  env.ts  execute_swap.ts  execute_swap_erc20.ts  init_swap.ts  init_swap_erc20.ts  initialize.ts
solana/l1x-swap/tests/: initialize.ts
solana/l1x-xtalk/: Anchor.toml
solana/l1x-xtalk/programs/xtalk/: Cargo.toml
solana/l1x-xtalk/programs/xtalk/src/: lib.rs
(+8 files in other folders)
