[package]
name = "xtalk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "xtalk"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
solana-program = "1.18.8"
bincode = "1.3.3"
hex = "0.4.3"
